crates/server/src/snapshots/donat_server__codegen__tests__enum_types_emit_alias_and_consts.snap
---
source: crates/server/src/codegen.rs
expression: out
---
// Code generated by donat codegen go; DO NOT EDIT.

package donat_gen

type TaskStatus string

const (
	TaskStatusOpen TaskStatus = "open"
	TaskStatusInProgress TaskStatus = "in_progress"
	TaskStatusDone TaskStatus = "done"
)

type Task struct {
	Id int32 `json:"id"`
	Status TaskStatus `json:"status"`
	Prev *TaskStatus `json:"prev"`
}
