crates/server/src/snapshots/donat_server__codegen__tests__multi_schema_tables_disambiguated.snap
---
source: crates/server/src/codegen.rs
expression: out
---
// Code generated by donat codegen go; DO NOT EDIT.

package donat_gen

type User struct {
	Id int32 `json:"id"`
}

type AuthUser struct {
	Id int32 `json:"id"`
}
