crates/server/src/snapshots/donat_server__codegen__tests__nullable_columns_become_pointers.snap
---
source: crates/server/src/codegen.rs
expression: out
---
// Code generated by donat codegen go; DO NOT EDIT.

package donat_gen

import (
	"github.com/shopspring/decimal"
)

type Nul struct {
	Id int32 `json:"id"`
	Note *string `json:"note"`
	Amount *decimal.Decimal `json:"amount"`
}
