crates/server/src/snapshots/donat_server__codegen__tests__scalars_all_types.snap
---
source: crates/server/src/codegen.rs
expression: out
---
// Code generated by donat codegen go; DO NOT EDIT.

package donat_gen

import (
	"encoding/json"
	"time"
	"github.com/shopspring/decimal"
)

type Wide struct {
	A int16 `json:"a"`
	B int64 `json:"b"`
	Amount decimal.Decimal `json:"amount"`
	Ratio float64 `json:"ratio"`
	CreatedAt time.Time `json:"created_at"`
	DueOn string `json:"due_on"`
	Uid string `json:"uid"`
	Payload json.RawMessage `json:"payload"`
	Weird json.RawMessage `json:"weird"`
}
