crates/server/src/snapshots/donat_server__codegen__tests__scalars_basic.snap
---
source: crates/server/src/codegen.rs
expression: out
---
// Code generated by donat codegen go; DO NOT EDIT.

package donat_gen

type TestT1 struct {
	C1 int32 `json:"c1"`
	C2 string `json:"c2"`
	Ok bool `json:"ok"`
}
